--- a/src/Command/Components/LinkStatus/LinkStatus.css
+++ b/src/Command/Components/LinkStatus/LinkStatus.css
@@ -1,28 +1,38 @@
-.link-status rux-table-body rux-table-row:nth-of-type(2),
-.link-status rux-table-body rux-table-row:nth-of-type(4),
-.link-status rux-table-body rux-table-row:nth-of-type(6) {
-  background-color: var(--color-background-base-header);
-  width: 100%;
+.link-status div:nth-of-type(2),
+.link-status div:nth-of-type(4),
+.link-status div:nth-of-type(6) {
+  background-color: var(--color-background-surface-default);
   text-align: right;
   font-style: italic;
   color: var(--color-text-secondary);
-  box-shadow: 0 6px 2px -1px var(--color-background-base-default);
-}
-
-.link-status rux-table-body rux-table-row:nth-of-type(2) rux-table-cell,
-.link-status rux-table-body rux-table-row:nth-of-type(4) rux-table-cell,
-.link-status rux-table-body rux-table-row:nth-of-type(6) rux-table-cell {
   font-size: var(--font-size-sm);
+  margin-bottom: var(--spacing-1);
+  padding-block: var(--spacing-1);
+  padding-inline: var(--spacing-2);
 }
 
-.link-status rux-table-body rux-table-row:nth-of-type(3) rux-table-cell,
-.link-status rux-table-body rux-table-row:nth-of-type(5) rux-table-cell {
-  padding-top: 0.3rem;
+.link-status div:nth-of-type(1) {
+  margin-top: var(--spacing-1);
+}
+
+.link-status div:nth-of-type(1),
+.link-status div:nth-of-type(3),
+.link-status div:nth-of-type(5) {
+  padding-block: var(--spacing-1);
+  padding-inline: var(--spacing-2);
+  background-color: var(--color-background-base-header);
 }
 
 .link-status span {
   display: flex;
   gap: 0.5rem;
+}
+
+.link-status::part(body) {
+  background-color: var(--color-background-base-default);
+  display: flex;
+  overflow: auto;
+  height: 100%;
 }
 
 .total {
